test/corpus/fail/bad-actor-import5.mo
=========
bad-actor-import5.mo
=========

//MOC-FLAG --actor-idl bad-actor-import5
import imported1 "canister:foo";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp


---

(source_file
  (line_comment)
  (import
    (var_pat
      (identifier))
    (text_literal))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))
